0.4.4:
- Close last tab now return to home page (thanks to Martin).
- Fix download error when url contains a "?".
- Spanish translation (thanks to Isaac L.).
- Brazilian Portuguese translation (thanks to Cynthia R., Jéssica B. and Thales A.).

0.4.3:
- Much better handling of Youtube videos.
- Volume keys can now be set to scroll page up/down (thanks to Martin).
- German translation (thanks to Martin again).

0.4.2:
- History records which also are bookmarks are now shown in history. Clicking on the star allow to set or unset an history record as bookmark.
- Bookmarks/history storage can be set to an internal database through preferences, for people concerned about privacy or who wants to keep different bookmarks set. Default behaviour is to use Android bookmarks database.
- Handle HTTP Authentication.
- Support system proxy (thanks to LeChuck). You will have to use a third-party application like "Proxy Settings" on the market to modify the system proxy settings.
- Last visited page can be restored when the browser restart. Must be enabled in preferences. 

0.4.1:
- Bugfixes for force close under Android >= 3.

0.4.0:
- Feature: Bookmarks and history now use Android stock bookmarks and history database. Your old bookmarks have been saved to your SD card. Go to "Preferences/Manage bookmarks and history" and import file "auto-export.xml" if you want to retrieve them.
- Feature: Zirco can now retrieve your bookmarks from Firefox Sync. Go to "Preferences/Firefox bookmarks" synchronization to start using it!
- Feature: a search can be done on web pages. 
- Add "Share" context menu to bookmarks and history view. 
- New design for start page.
- Remove completed download from download list.
- Notification for completed downloads are removed when clicking on it.

0.3.9:
- Bug fix in history view. Items are now displayed in differents categories (today, last week, last month...)