@@ -15,6 +15,7 @@
 
 package org.zirco.model.items;
 
+import java.io.File;
 import java.util.Random;
 
 import org.zirco.R;
@@ -22,6 +23,7 @@ import org.zirco.events.EventConstants;
 import org.zirco.events.EventController;
 import org.zirco.ui.activities.DownloadsListActivity;
 import org.zirco.ui.runnables.DownloadRunnable;
+import org.zirco.utils.IOUtils;
 
 import android.app.Notification;
 import android.app.NotificationManager;
@@ -97,6 +99,10 @@ public class DownloadItem {
 	 */
 	public String getFileName() {
 		return mFileName;
+	}
+	
+	public String getFilePath() {
+		return IOUtils.getDownloadFolder().getAbsolutePath() + File.separator + mFileName;
 	}
 	
 	/**
